Add unit test and fixes
Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>